Fix printing on firefox.  Remove boxshadow

--- a/css/groove_writer.css
+++ b/css/groove_writer.css
@@ -358,8 +358,8 @@
 	#svgTarget {
 		width: 795px;
 		background: #FFF;
-		border: 1px solid #000;
 		box-shadow: 7px 7px 5px #888888;
+		/border: 1px solid #000;
 	}
 	
 	// Context Menu
@@ -503,7 +503,7 @@
 	}
 	#buttonsAboveSheetMusic {
 		margin-top: 2px;
-		width: 797px;
+		width: 795px;
 		padding-right: 10px;
 		-webkit-justify-content: space-between;
 		display: -webkit-flex;
